# noita_mod_settings_extractor

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
src/: formatter.cpp  formatter.h  main.cpp  parser.cpp  parser.h  processor.cpp  processor.h  types.h  wasm_binding.cpp
